src/main/java/com/example/credit_service_project/service/errors/exceptions/ProductNotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(String message) {
        super(message);
    }
}
